Enable audio codec tlv320aic3107 function
We can support the WM8960 and TLV320AIC3107 codecs by using different Device Tree Binary (DTB) files.

fw_setenv boot_conf "#conf-mediatek_lec-mtk-i1200-ufs.dtb#conf-audio-tlv320aic310x.dtbo"
fw_setenv boot_conf "#conf-mediatek_lec-mtk-i1200-ufs.dtb#conf-audio-wm8960.dtbo"

--- a/arch/arm64/boot/dts/mediatek/lec-mtk-i1200.dts
+++ b/arch/arm64/boot/dts/mediatek/lec-mtk-i1200.dts
@@ -338,6 +338,14 @@
                         gpio-controller;
         };
 
+        tlv320aic310x: tlv320aic310x@18 {
+			compatible = "ti,tlv320aic3x";
+			#sound-dai-cells = <0>;
+			reg = <0x18>;
+			ai3x-micbias-vg = <2>; /* MICBIAS_2_5V */
+			status = "disabled";
+        };
+
         wm8960: wm8960@1a {
 		compatible = "wlf,wm8960";
 		#sound-dai-cells = <0>;
@@ -810,7 +818,7 @@
 	usb_p0_p2_mux_sel {
 		gpio-hog;
 		gpios = <3 GPIO_ACTIVE_HIGH>;
-                output-high;  //USB P2 <--> SMARC OTG
+		output-high;  //USB P2 <--> SMARC OTG
 		line-name = "USB_P0_P2_MUX_SEL";
 	};
 
