Add SKU and PCB info kernel driver

--- a/arch/arm64/configs/adlink_lec_i1200_ufs_defconfig
+++ b/arch/arm64/configs/adlink_lec_i1200_ufs_defconfig
@@ -268,6 +268,7 @@ CONFIG_VIRTIO_BLK=y
 CONFIG_BLK_DEV_NVME=m
 CONFIG_SRAM=y
 CONFIG_PCI_ENDPOINT_TEST=m
+CONFIG_ADLINK_SKU_PCB_INFO=y
 CONFIG_EEPROM_AT24=y
 CONFIG_EEPROM_AT25=m
 CONFIG_UACCE=m
