--- a/arch/arm64/boot/dts/mediatek/lec-mtk-i1200.dts
+++ b/arch/arm64/boot/dts/mediatek/lec-mtk-i1200.dts
@@ -600,11 +600,11 @@
 	#size-cells = <0>;
 	status = "okay";
 
-	spidev@0 {
-		compatible = "rohm,dh2228fv";
-		spi-max-frequency = <5000000>;
-		reg = <0>;
-	};
+        w25q64dw: spi-flash@0 {
+                compatible = "winbond,w25q64dw", "jedec,spi-nor";
+                reg = <0>;
+                spi-max-frequency = <25000000>;
+        };
 };
 
 &ssusb {
