--- a/arch/arm64/boot/dts/mediatek/lec-mtk-i1200.dts
+++ b/arch/arm64/boot/dts/mediatek/lec-mtk-i1200.dts
@@ -739,7 +739,7 @@
 	#size-cells = <0>;
 	poweron-in-hs-mode = <0>;
 	dsi_panel@0 {
-		compatible = "auo,b101uan01v7";
+		compatible = "auo,b080uan01";
 		reg = <0>;
 		enable-gpios = <&pio 96 0>;
 		pinctrl-names = "default";
